fixed jumping buttons on fron page, resized lorem ipsum text

--- a/themes/kin-athletics/sass/_landing-page.scss
+++ b/themes/kin-athletics/sass/_landing-page.scss
@@ -41,11 +41,12 @@ img {
 }
 
 .project-td-text {
-  margin-top: 58%;
+  bottom:35%;
   margin-left: 9.5%;
   @media only screen and (min-width: 600px) {
     margin-top: 15%;
     margin-left: 4%;
+    bottom:25%
   }
   h2 {
     font-family: $font__main;
@@ -56,8 +57,8 @@ img {
     letter-spacing: .5px;
     margin: 0;
     @media only screen and (min-width: 600px) {
-      font-size: 3.8rem;
-      line-height: 5rem;
+      font-size: 3.5rem;
+      line-height: 4.5rem;
       width: 20rem
     }
   }
@@ -67,13 +68,14 @@ img {
     margin: 0;
     @media only screen and (min-width: 600px) {
       font-size: 8rem;
+      line-height: 8rem;
     }
   }
 }
 
 .who-we-are-text{
   @media only screen and (min-width: 600px) {
-    bottom:5rem;
+    bottom:8rem;
     h2 {
       font-size: 6rem;
       line-height: 8rem;
@@ -84,6 +86,7 @@ img {
       padding-left: 35%;
       margin-top: .3rem;
       padding-right:7%;
+      font-size:25px;
     }
   }
 }
@@ -113,6 +116,7 @@ p {
   margin-top: 15rem;
   @media only screen and (min-width: 600px) {
     margin-top:15rem;
+    bottom:8rem;
     h2 {
       font-size: 6rem;
       line-height: 8rem;
@@ -124,6 +128,7 @@ p {
       padding-right: 35%;
       margin-top: .3rem;
       text-align: left;
+      font-size:25px;
     }
   }
 }
@@ -141,14 +146,13 @@ p {
     display:flex;
     @include front-red-button;
     position: absolute;
-    margin-left:17%; 
-    @media only screen and (max-width: 600px) {
-      top:25rem;
-    }
+    margin-left:20%; 
     @media only screen and (min-width: 600px) {
-      margin-left:58rem; 
+      // margin-left:58rem; 
+      right:-75%;
       margin-top:0;
-      top:30rem;
+      bottom:15%;
+      // top:30rem;
     }
   }
 
@@ -182,187 +186,6 @@ p {
       }
   }
 
-/* Landing Page */
-
-.front-page-container {
-  color:white;
-  width: 100vw;
-}
-
-.project-td-cont {
-  height: 100vh;
-  position:relative;
-  overflow:hidden;
-}
-.who-we-are-cont, .what-we-do-cont {
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-}
-  .project-td-image-wrapper, .project-td-image-wrapper, .front-img-wrapper {
-  .project-td-image, .who-we-are-image, .what-we-do-image {
-    position: absolute;
-    @media only screen and (max-width: 600px) {
-    overflow: hidden;
-    transform: translate(-36%, .1%);
-    }
-  }
-}
-
-img {
-  height: 100vh;
-  max-width: none;
-  @media only screen and (min-width: 600px) {
-    width:100vw;
-    height:100vh;
-  }
-}
-
-
-.project-td-text, .who-we-are-text, .what-we-do-text {
-  position: absolute;
-  z-index: 999;
-}
-
-.project-td-text {
-  margin-top: 55%;
-  margin-left: 9.5%;
-  @media only screen and (min-width: 600px) {
-    margin-top: 15%;
-    margin-left: 4%;
-  }
-  h2 {
-    font-family: $font__main;
-    font-size: 2rem;
-    width: 12rem;
-    line-height: 2.8rem;
-    font-weight: 300;
-    letter-spacing: .5px;
-    margin: 0;
-    @media only screen and (min-width: 600px) {
-      font-size: 3.8rem;
-      line-height: 5rem;
-      width: 20rem
-    }
-  }
-  .front-heading {
-    font-size: 3rem;
-    font-weight: 500;
-    margin: 0;
-    @media only screen and (min-width: 600px) {
-      font-size: 8rem;
-    }
-  }
-}
-
-.who-we-are-text{
-  @media only screen and (min-width: 600px) {
-    h2 {
-      font-size: 6rem;
-      line-height: 8rem;
-      margin-right: 7%;
-    }
-    .front-lorem {
-      padding: .5rem 2rem;
-      padding-left: 35%;
-      margin-top: .3rem;
-      padding-right:7%;
-    }
-  }
-}
-
-p {
-  margin-bottom: .75rem;
-}
-
-.who-we-are-text {
-  text-align: right;
-  margin-top: 15rem;
-  @media only screen and (min-width: 600px) {
-    margin-top: 20rem;
-  }
-  .who-button-cont {
-    @include front-red-button;
-    position:absolute;
-    left:45%; 
-    @media only screen and (min-width: 600px) {
-      left: 70%;
-    
-    }
-  }
-}
-.what-we-do-text{
-  text-align: left;
-  margin-top: 15rem;
-  @media only screen and (min-width: 600px) {
-    margin-top:20rem;
-    bottom:5rem;
-    h2 {
-      font-size: 6rem;
-      line-height: 8rem;
-      margin-left: 5rem;
-      text-align: left;
-    }
-    .front-lorem {
-      padding: .5rem 2rem;
-      padding-right: 35%;
-      margin-top: .3rem;
-      text-align: left;
-    }
-  }
-}
-.what-we-do-text {
-  text-align: left;
-  .what-button-cont {
-    @include front-red-button;
-    position: absolute;
-    margin-left:8%; 
-  }
-}
-  .td-button-cont {
-    position: absolute;
-    z-index: 999;
-    display:flex;
-    @include front-red-button;
-    position: absolute;
-    margin-left:17%; 
-    top:25rem;
-    @media only screen and (min-width: 600px) {
-      margin-left:58rem; 
-      margin-top:0;
-      top:28rem;
-    }
-  }
-
-    .landing-scroll-section {
-      height: 85px;
-      background-color: white;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      margin:0;
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-     
-      @media only screen and (min-width: 600px) {
-        margin-top:10rem;
-      }
-      p, .v {
-        color: $color__brand-red;
-        text-transform: uppercase;
-        text-align: center;
-        font-family: $font__accent;
-        font-size: 18px;	
-        font-weight: 500;	
-        line-height: 24px;
-        width:60px;
-      }
-      .v {
-        padding-top: 50px;
-        z-index: 99;
-      }
-  }
 
   .main-carousel {
     height: 100vh;
@@ -391,9 +214,9 @@ p {
     display:none;
   }
   }
-  // .flickity-page-dots {
-  
-  // }
-  // .main-carousel {
-  //   height:80vh;
-  // }
+.page-template-landing-page{
+  .flickity-page-dots {
+    bottom: 120px;
+    color:white;
+  }
+}
